[package]
name = "helium-crypto"
version = "0.3.4"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
thiserror = "1"
bs58 = {version = "0.4", features=["check"]}
base64 = "0"
drop_guard = { version = "0.3.0", optional = true }
signature = "*"
serde = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0"
ed25519-dalek = { git = "https://github.com/helium/ed25519-dalek", branch = "madninja/bump_rand" }
p256 = { version="0.10.1", default-features=false, features=["arithmetic", "ecdsa", "sha256", "ecdh"] }
ecc608-linux = { version = "0", optional = true}
tss2 = {version = "0", optional = true}
lazy_static = "1.4.0"
libc = {version = "0", optional = true}
multihash = {version = "0", optional = true}

[features]
default = []
ecc608 = [ "ecc608-linux" ]
tpm = ["tss2", "libc", "drop_guard"]
multisig = ["multihash"]

[dev-dependencies]
hex = "0"
hex-literal = "0"
rand = "*"
sha2 = "*"


