[package]
name = "helium-crypto"
version = "0.6.6"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Helium Blockchain cryptography library"
repository = "https://github.com/helium/helium-crypto-rs"
readme = "README.md"

[dependencies]
thiserror = "1"
bs58 = {version = "0.4", features=["check"]}
base64 = ">=0.21"
drop_guard = { version = "0.3.0", optional = true }
signature = "1.3"
serde =  {version = "1", features=["derive"]}
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0"
ed25519-compact = {version = "2", features = ["std", "traits"] }
p256 = { version="0.10", default-features=false, features=["arithmetic", "ecdsa", "sha256", "ecdh"] }
k256 = { version="0.10", default-features=false, features=["arithmetic", "ecdsa", "sha256", "ecdh"] }
ecc608-linux = { version = "0", optional = true}
tss2 = {version = "0", optional = true}
lazy_static = "1.4.0"
libc = {version = "0", optional = true}
multihash = {version = "0", optional = true}
sqlx = {version = "0", optional = true, default-features=false}
solana-sdk = {version = "1.15", optional = true }

[features]
default = []
ecc608 = [ "ecc608-linux" ]
tpm = ["tss2", "libc", "drop_guard"]
multisig = ["multihash"]
sqlx-postgres = ["sqlx/postgres", "sqlx/runtime-tokio-rustls"]
solana = ["solana-sdk"]

[dev-dependencies]
hex = "0"
hex-literal = "0"
rand = "0.8"
serde_json = "1"
serde_test = "1"
